전송되는 video 영상 바꾸기

--- a/test_webrtc/nginx/html/index.html
+++ b/test_webrtc/nginx/html/index.html
@@ -11,6 +11,7 @@
     <div><a href="candidateTypeTest.html">candidateTypeTest</a></div>
     <div><a href="dataChannelTest.html">dataChannelTest</a></div>
     <div><a href="multiTurnServerTest.html">multiTurnServerTest</a></div>
+    <div><a href="switchStreamTest.html">switchStreamTest</a></div>
 </div>
 </body>
 </html>
